<resources>

    <string name="app_name">Gamma</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash__screen">Splash_Screen</string>
    <string name="total">Number of Meals Days</string>
    <color name="black">#000000</color>
    <string name="meal_swipes">190</string>
    <string name="flex_dollars">50.00</string>
    <string name="guest_passes">5</string>
    <string name="meal_days">150</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tues">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thur">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sunlun">1</string>
    <string name="sundin">2</string>
    <string name="monlun">3</string>
    <string name="mondin">4</string>
    <string name="tuelun">5</string>
    <string name="tuedin">6</string>
    <string name="wedlun">7</string>
    <string name="weddin">8</string>
    <string name="thulun">9</string>
    <string name="thudin">10</string>
    <string name="frilun">11</string>
    <string name="fridin">12</string>
    <string name="satlun">13</string>
    <string name="satdin">14</string>
    <string name="twittername">\@Lackmann_Fisher</string>

    <string name="ftTitle">Enter Information</string>
    <string name="ftMealSwipes">Meal Swipes</string>
    <string name="ftDiningDollars">Dining Dollars</string>
    <string name="ftGuestPasses">Guest Passes</string>
    <string name="ftSubmit">Submit</string>
    <string name="confirmTitle">Is this correct?</string>
    <string name="test">test</string>
     <color name="white1">#FFFFFF</color>
     <color name="white2">#DDDDDD</color>

</resources>